# parametric-concept-memory

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  PAPER.md  PAPER.zh-CN.md  README.md  README.zh-CN.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: COLOR_CONCEPT_STUDY.md  COMPOSITIONAL_NUMBER_STUDY.md  CONTEXTUAL_CONCEPT_COLLAPSE.md  COUNTERFACTUAL_SWAP.md  EMERGENT_BASE10_STUDY.md  PARAMETRIC_CONCEPT_MEMORY.md  PHONEME_CONCEPT_STUDY.md  PURITY_AUDIT.md  QUAD_STUDY.md  SCALE_STUDY.md  SINGLE_VS_DUAL_MUSCLE_FINDING.md  SPACE_CONCEPT_STUDY.md  WORKSHOP_PAPER_OUTLINE.md
experiments/: __init__.py  _graph_builder.py  color_concept_study.py  compositional_number_study.py  counterfactual_swap_study.py  emergent_base10_study.py  phoneme_concept_study.py  purity_audit.py  quad_study.py  render_paper_figures.py  robustness_study.py  scale_study.py  space_concept_study.py  train_ans.py
outputs/ans_encoder/: eval_report.json  final.pt
pcm/: __init__.py  concept_graph.py  param_bundle.py
pcm/heads/: __init__.py  arithmetic_head.py  arithmetic_head_v2.py  comparison_head.py  numerosity_classifier.py  numerosity_encoder.py
submission/: README.md
submission/arxiv/: main.tex
submission/neurips/: abstract.tex  main.tex  paper_body.tex  preamble_common.tex  teaser.tex
tests/: test_smoke.py
